Atualizar o contabilidade.html

--- a/trabalho1cursos/contabilidade.html
+++ b/trabalho1cursos/contabilidade.html
@@ -10,13 +10,14 @@
     <header>
         
         <h1>Sobre o curso</h1>
-        <nav aria-label="Menu Principal">
-            <ul>
-                <li><a href="index.html#cursos">Cursos</a></li>
-                <li><a href="index.html#sobre">Sobre Nós</a></li>
-                <li><a href="index.html#contato">Contato</a></li>
-            </ul>
-        </nav>
+        
+<nav class="menu-principal">
+        <button>Home</button>
+        <button>Cursos</button>
+        <button>Sobre Nós</button>
+        <button>Contato</button>
+    </nav>
+
     </header>
 
     <center>
