--- a/trabalho1cursos/contabilidade.html
+++ b/trabalho1cursos/contabilidade.html
@@ -12,11 +12,14 @@
         <h1>Sobre o curso</h1>
         
 <nav class="menu-principal">
-        <button>Home</button>
-        <button>Cursos</button>
-        <button>Sobre Nós</button>
-        <button>Contato</button>
-    </nav>
+                    <nav aria-label="Menu Principal">
+
+                <button><a href="#cursos">Cursos</a></button>
+
+                <button><a href="#sobre">Sobre Nós</a></button>
+
+                <button><a href="#contato">Contato</a></button>
+                    </nav>
 
     </header>
 
