Atualizar o vendas.html

--- a/trabalho1cursos/vendas.html
+++ b/trabalho1cursos/vendas.html
@@ -10,13 +10,17 @@
     <header>
 
         <h1>Sobre o curso</h1>
-        <nav aria-label="Menu Principal">
-            <ul>
-                <li><a href="index.html#cursos">Cursos</a></li>
-                <li><a href="index.html#sobre">Sobre Nós</a></li>
-                <li><a href="index.html#contato">Contato</a></li>
-            </ul>
-        </nav>
+        
+    <nav class="menu-principal">
+                    <nav aria-label="Menu Principal">
+
+                <button><a href="#cursos">Cursos</a></button>
+
+                <button><a href="#sobre">Sobre Nós</a></button>
+
+                <button><a href="#contato">Contato</a></button>
+                    </nav>
+
     </header>
 
     <center>
@@ -25,15 +29,17 @@
             <h2 id="vendas-titulo">VENDAS</h2>
             <p>O curso de Vendas é ideal para quem deseja desenvolver habilidades estratégicas e práticas para atuar no mercado de vendas. Os alunos aprenderão técnicas de negociação, estratégias de marketing, comportamento do consumidor, gestão de relacionamento com clientes (CRM), e princípios de vendas consultivas. O currículo inclui tópicos como comunicação eficaz, gestão de equipes de vendas, análise de mercado, e uso de ferramentas tecnológicas para otimizar o processo de vendas. Além de aulas teóricas, o curso oferece workshops e simulações práticas para preparar os estudantes para situações reais do ambiente de vendas. O objetivo é formar profissionais capacitados para impulsionar o desempenho comercial de empresas, aumentar as receitas e construir relacionamentos duradouros com os clientes.</p>
 
+           <img src="vendas.png" class="curso-img">
+
             <a href="#" class="button" aria-label="Inscreva-se no curso de Contabilidade">Inscreva-se</a>
         </section>
 
-        <img src="vendas.png" class="curso-img">
     </main>
         </center>
 
     <footer>
         <p>Este projeto é apenas ilustrativo. Estas páginas foram desenvolvidas como atividade da Disciplina Programação para Web I.</p>
     </footer>
+
 </body>
 </html>
