Atualizar o administracao.html

--- a/trabalho1cursos/administracao.html
+++ b/trabalho1cursos/administracao.html
@@ -9,14 +9,17 @@
 <body>
     <header>
         <h1>Sobre o curso</h1>
-        <nav aria-label="Menu Principal">
-            <ul>
-                <li><a href="index.html#cursos">Cursos</a></li>
-                <li><a href="index.html#sobre">Sobre Nós</a></li>
-                <li><a href="index.html#contato">Contato</a></li>
-                
-            </ul>
-        </nav>
+
+        <nav class="menu-principal">
+                    <nav aria-label="Menu Principal">
+
+                <button><a href="#cursos">Cursos</a></button>
+
+                <button><a href="#sobre">Sobre Nós</a></button>
+
+                <button><a href="#contato">Contato</a></button>
+                    </nav>
+
     </header>
 
     <center>
