Atualizar o hospedagem.html

--- a/trabalho1cursos/hospedagem.html
+++ b/trabalho1cursos/hospedagem.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso de Hospedagem</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Sobre os cursos</h1>
+        
+        <nav class="menu-principal">
         <nav aria-label="Menu Principal">
-            <ul>
-                <li><a href="index.html#cursos">Cursos</a></li>
-                <li><a href="index.html#sobre">Sobre Nós</a></li>
-                <li><a href="index.html#contato">Contato</a></li>
-            </ul>
-        </nav>
+
+                <button><a href="#cursos">Cursos</a></button>
+
+                <button><a href="#sobre">Sobre Nós</a></button>
+
+                <button><a href="#contato">Contato</a></button>
+       </nav>
+
     </header>
 
     <center>
