Atualizar o index.html

--- a/trabalho1cursos/index.html
+++ b/trabalho1cursos/index.html
@@ -63,7 +63,7 @@
 
         <section id="sobre" aria-labelledby="sobre-titulo">
             <h2 id="sobre-titulo">Sobre Nós</h2>
-            <p>Bem-vindo ao nosso curso! Somos uma empresa dedicada a oferecer cursos online gratuitos para a comunidade. Nosso objetivo é proporcionar educação acessível e de qualidade para todos por meio dos nossos curso. Com anos de experiência na indústria e um compromisso com a excelência educacional, criámos este curso para proporcionar uma aprendizagem envolvente e prática. Quer seja um iniciante ou um profissional experiente, o nosso objetivo é capacitar-lhe com as habilidades e conhecimentos necessários para alcançar os seus objetivos.</p>
+            <p>Bem-vindo ao nosso curso! Somos uma empresa dedicada a oferecer cursos online gratuitos para a comunidade. Nosso objetivo é proporcionar educação acessível e de qualidade para todos por meio dos nossos cursos. Com anos de experiência na indústria e um compromisso com a excelência educacional, criámos este curso para proporcionar uma aprendizagem envolvente e prática. Quer seja um iniciante ou um profissional experiente, o nosso objetivo é capacitar-lhe com as habilidades e conhecimentos necessários para alcançar os seus objetivos.</p>
     
         <section id="contato" aria-labelledby="contato-titulo">
             <h2 id="contato-titulo">Contato</h2>
